# todo-app

./: Cargo.toml  README.md  config.json  entries.json
src/: json_parser.rs  main.rs  todo_func.rs
src/ui/: center_panel.rs  mod.rs  popups.rs  settings.rs  side_panel.rs  top_panel.rs
