[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"

authors = ["name <your.email@example.com>"]
license = "Unlicensed"
description = "Personal project todo-list app"

[dependencies]
eframe = {version = "0.28.1", features = ["persistence"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.120"
